# CompareFace

./: CMakeLists.txt  README.md  detectFaces.cpp  main.cpp  setup
.github/workflows/: test_build.yaml
FAR-FRR/: far-frr-plot.py  far-processing.py  far-script.py  frr-processing.py  frr-script.py  frr.py  plot.py  processed-far.txt  processed-frr.txt
FAR-FRR/far-raw-results/: ThreadPoolExecutor-0_1.txt  ThreadPoolExecutor-0_5.txt
FAR-FRR/far-results/: ThreadPoolExecutor-0_0.txt  ThreadPoolExecutor-0_2.txt  ThreadPoolExecutor-0_3.txt  ThreadPoolExecutor-0_4.txt
FAR-FRR/far_processed_results/: processed-far.txt
FAR-FRR/frr-raw-results/: ThreadPoolExecutor-0_2.txt  ThreadPoolExecutor-0_3.txt  ThreadPoolExecutor-0_5.txt
FAR-FRR/frr-results/: ThreadPoolExecutor-0_0.txt  ThreadPoolExecutor-0_1.txt  ThreadPoolExecutor-0_4.txt
FAR-FRR/frr_processed_results/: processed-frr.txt
sources/: source.cpp
